[tool.poetry]
name = "coffee_demo"
version = "0.1.0"
description = "Internal Groundlight Coffee Demo"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
groundlight = "^0.13.1"
framegrab = "^0.4.3"
imgcat = "^0.5.0"
opencv-python = "^4.7.0.72"
pydantic = "<2.0"

# [tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.7"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
